unpackaged/main/default/objects/Shift/fields/Is_SDO__c.field-meta.xml
<CustomField>
    <fullName>Is_SDO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SDO Demo Data</label>
    <type>Checkbox</type>
</CustomField>