unpackaged/main/default/objects/Shift/fields/Is_SDO_Demo_Data_Key_Shift__c.field-meta.xml
<CustomField>
    <fullName>Is_SDO_Demo_Data_Key_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SDO Demo Data Key Shift</label>
    <type>Checkbox</type>
</CustomField>