unpackaged/main/default/objects/Shift/fields/SDO_Service_WEM_In_the_Past__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_WEM_In_the_Past__c</fullName>
    <description>*What*: Used to indicate if shift is in the past.  *Who*: Gregory Johnson. *When*: June 2022</description>
    <formula>EndTime &lt; Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In the Past?</label>
    <type>Checkbox</type>
</CustomField>