unpackaged/main/default/objects/Shift/listViews/SDO_Service_WEM_My_Upcoming_Shifts.listView-meta.xml
<ListView>
    <fullName>SDO_Service_WEM_My_Upcoming_Shifts</fullName>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Name</columns>
    <columns>ServiceResource</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDO_Service_WEM_Assigned_to_me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SDO_Service_WEM_In_the_Past__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Upcoming Shifts</label>
</ListView>